find7: Copy wifi firmware files to /persist
Change-Id: I48edf683be9f4c7a7f34bfcc47fe66054b0c2f4b

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -190,6 +190,9 @@ on post-fs-data
     # Create /data/time folder for time-services
     mkdir /data/time/ 0700 system system
 
+    # Wifi firmware copy
+    exec /system/bin/sh /system/etc/init.qcom.wifi.sh
+
     setprop qcom.audio.init complete
 
     setprop vold.post_fs_data_done 1
