find7: Set NFC permissions
Change-Id: I7a692500d966e2f3a58c1413de1a2dcd3db3f953

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -177,3 +177,6 @@
 /dev/uio0                 0660   system     system
 /dev/uio1                 0660   system     system
 /dev/uio2                 0660   system     system
+
+# NFC
+/dev/pn544                0600   nfc        nfc
