find7: Create Oppo NV item directory
Change-Id: Ie30b1a135dee5f341b19cce7d50d19cfc90253b7

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -72,6 +72,9 @@ on boot
     chown bluetooth net_bt_stack /sys/devices/platform/msm_serial_hs.0/clock
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
 
+    #Create OPPO NV item directory
+    mkdir /data/opponvitems 0771 radio radio
+
     #Create QMUX deamon socket area
     mkdir /dev/socket/qmux_radio 0770 radio radio
     chmod 2770 /dev/socket/qmux_radio
