find7: Fix permission on sensors directory
Change-Id: Ifc02de093579c2ce877c2079f455cc015a66cf09

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -157,9 +157,10 @@ on post-fs-data
     # Create directory used by sensor subsystem
     mkdir /data/system 0755 system system
     mkdir /data/system/sensors
-    chmod 655 /data/system/sensors
+    chmod 755 /data/system/sensors
     write /data/system/sensors/settings 1
-    chmod 660 /data/system/sensors/settings
+    chmod 664 /data/system/sensors/settings
+    chown system /data/system/sensors/settings
 
     # AKM setting data
     mkdir /data/misc/sensors
