find7: Configure GPS
Change-Id: If2f5e1ebc4b7bcc21c8754c54f2ebb1601f99a6e

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -533,3 +533,9 @@ service wcnss-service /system/bin/wcnss_service
     user system
     group system wifi
     oneshot
+
+# GPS
+service gsiff_daemon /system/bin/gsiff_daemon
+    class late_start
+    user system
+    group gps net_raw
