--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-import init.qcom.usb.rc
+import /init.oppo.usb.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
@@ -155,16 +155,11 @@ on post-fs-data
     mkdir /data/misc/audio 0770 audio audio
 
     # Create directory used by sensor subsystem
-    mkdir /data/system 0755 system system
-    mkdir /data/system/sensors
-    chmod 755 /data/system/sensors
-    write /data/system/sensors/settings 1
-    chmod 664 /data/system/sensors/settings
-    chown system /data/system/sensors/settings
-
-    # AKM setting data
-    mkdir /data/misc/sensors
-    chmod 775 /data/misc/sensors
+    mkdir /persist/sensors 0775 system root
+    write /persist/sensors/sensors_settings 1
+    chmod 0644 /persist/sensors/sensors_settings
+    chown system.root /persist/sensors/sensors_settings
+    mkdir /data/misc/sensors 0775 system system
 
     # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
@@ -187,7 +182,7 @@ on post-fs-data
     mkdir /data/misc/gpsone_d 0770 system gps
 
     #Create directories for QuIPS
-    mkdir /data/misc/quipc 0770 gps system
+    mkdir /data/misc/quipc 0770 system gps
 
     #Create directories for Location services
     mkdir /data/misc/location 0770 gps gps
@@ -328,10 +323,11 @@ service qmuxd /system/bin/qmuxd
 
 service netmgrd /system/bin/netmgrd
     class main
+    disabled
 
 # QCOM sensor
 service sensors /system/bin/sensors.qcom
-    class main
+    class late_start
     user root
     group root
 
