--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -19,6 +19,7 @@ import /init.oppo.usb.rc
 on early-init
     mount debugfs debugfs /sys/kernel/debug
     chown system system /sys/kernel/debug/kgsl/proc
+    write /sys/block/mmcblk0/queue/scheduler noop
 
 on init
     chmod 0701 /mnt/media_rw
@@ -304,6 +305,7 @@ on property:sys.boot_completed=1
     chmod 664 /sys/devices/system/cpu/cpu2/online
     chmod 664 /sys/devices/system/cpu/cpu3/online
     write /dev/cpuctl/apps/cpu.notify_on_migrate 1
+    write /sys/block/mmcblk0/queue/scheduler row
     start mpdecision
 
 service rmt_storage /system/bin/rmt_storage
