--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-import /init.oppo.usb.rc
+import /init.qcom.usb.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
