--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -549,3 +549,9 @@ service ppd /system/bin/mm-pp-daemon
 
 on property:init.svc.surfaceflinger=stopped
     stop ppd
+
+service nvinit /system/bin/hwaddrs
+    class core
+    user root
+    group system wifi
+    oneshot
