Moar hax: Fetch the baseband version from the modem image
Change-Id: Ib173a9122700f3be7fd38d286f88b0b8f4c46fa4

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -555,3 +555,7 @@ service nvinit /system/bin/hwaddrs
     user root
     group system wifi
     oneshot
+
+service bbvinit /system/bin/sh /system/etc/init.bbv.sh
+    class late_start
+    oneshot
