--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -9,6 +9,9 @@ libraries {
   bundle {
     path /system/lib/soundfx/libbundlewrapper.so
   }
+  cm {
+    path /system/lib/soundfx/libcyanogen-dsp.so
+  }
   reverb {
     path /system/lib/soundfx/libreverbwrapper.so
   }
@@ -29,13 +32,6 @@ libraries {
   }
 }
 
-# Default pre-processing library. Add to audio_effect.conf "libraries" section if
-# audio HAL implements support for default software audio pre-processing effects
-#
-#  pre_processing {
-#    path /system/lib/soundfx/libaudiopreprocessing.so
-#  }
-
 # list of effects to load. Each effect element must contain a "library" and a "uuid" element.
 # The value of the "library" element must correspond to the name of one library element in the
 # "libraries" element.
@@ -52,39 +48,27 @@ libraries {
 #    }
 
 effects {
-
-# additions for the proxy implementation
-# Proxy implementation
-  #effectname {
-    #library proxy
-    #uuid  xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
-
-    # SW implemetation of the effect. Added as a node under the proxy to
-    # indicate this as a sub effect.
-      #libsw {
-         #library libSW
-         #uuid  yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy
-      #} End of SW effect
-
-    # HW implementation of the effect. Added as a node under the proxy to
-    # indicate this as a sub effect.
-      #libhw {
-         #library libHW
-         #uuid  zzzzzzzz-zzzz-zzzz-zzzz-zzzzzzzzzzzz
-      #}End of HW effect
-  #} End of effect proxy
-
+  compression {
+    library cm
+    uuid f27317f4-c984-4de6-9a90-545759495bf2
+  }
   bassboost {
-    library bundle
-    uuid 8631f300-72e2-11df-b57e-0002a5d5c51b
+#    library bundle
+#    uuid 8631f300-72e2-11df-b57e-0002a5d5c51b
+    library cm
+    uuid 42b5cbf5-4dd8-4e79-a5fb-cceb2cb54e13
   }
   virtualizer {
-    library bundle
-    uuid 1d4033c0-8557-11df-9f2d-0002a5d5c51b
+#    library bundle
+#    uuid 1d4033c0-8557-11df-9f2d-0002a5d5c51b
+    library cm
+    uuid 7c6cc5f8-6f34-4449-a282-bed84f1a5b5a
   }
   equalizer {
-    library bundle
-    uuid ce772f20-847d-11df-bb17-0002a5d5c51b
+#    library bundle
+#    uuid ce772f20-847d-11df-bb17-0002a5d5c51b
+    library cm
+    uuid 58bc9000-0d7f-462e-90d2-035eddd8b434
   }
   volume {
     library bundle
@@ -133,23 +117,6 @@ effects {
     uuid 1d97bb0b-9e2f-4403-9ae3-58c2554306f8
   }
 }
-
-# Default pre-processing effects. Add to audio_effect.conf "effects" section if
-# audio HAL implements support for them.
-#
-#  agc {
-#    library pre_processing
-#    uuid aa8130e0-66fc-11e0-bad0-0002a5d5c51b
-#  }
-#  aec {
-#    library pre_processing
-#    uuid bb392ec0-8d4d-11e0-a896-0002a5d5c51b
-#  }
-#  ns {
-#    library pre_processing
-#    uuid c06c8400-8e06-11e0-9cb6-0002a5d5c51b
-#  }
-
 # Audio preprocessor configurations.
 # The pre processor configuration consists in a list of elements each describing
 # pre processor settings for a given input source. Valid input source names are:
