--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -47,10 +47,13 @@ on init
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
 
 on early-boot
+    # set RLIMIT_MEMLOCK to 64MB
+    setrlimit 8 67108864 67108864
     write /sys/kernel/boot_adsp/boot 1
 
 on fs
     mount_all ./fstab.qcom
+    restorecon_recursive /persist
     setprop ro.crypto.fuse_sdcard true
 
 on boot
@@ -151,16 +154,19 @@ on boot
 
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
+    restorecon_recursive /data/media
 
     # NFC: create data/nfc for nv storage
     mkdir /data/nfc 0770 nfc nfc
     mkdir /data/nfc/param 0770 nfc nfc
+    restorecon_recursive /data/nfc
 
     #  bluetooth
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
 
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
+    restorecon_recursive /data/misc/audio
 
     # Create directory used by sensor subsystem
     mkdir /persist/sensors 0775 system root
@@ -168,6 +174,7 @@ on post-fs-data
     chmod 0644 /persist/sensors/sensors_settings
     chown system.root /persist/sensors/sensors_settings
     mkdir /data/misc/sensors 0775 system system
+    restorecon_recursive /data/misc/sensors
 
     # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
@@ -175,6 +182,8 @@ on post-fs-data
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
+
+    restorecon /data/fdAlbum
 
     # Create the directories used by CnE subsystem
     mkdir /data/connectivity 0771 system system
@@ -199,6 +208,7 @@ on post-fs-data
 
     # Create /data/time folder for time-services
     mkdir /data/time/ 0700 system system
+    restorecon_recursive /data/time
 
     setprop qcom.audio.init complete
 
@@ -309,6 +319,7 @@ on property:sys.boot_completed=1
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
+    group system
 
 service rfs_access /system/bin/rfs_access
     class core
@@ -324,7 +335,7 @@ service qmuxd /system/bin/qmuxd
 service netmgrd /system/bin/netmgrd
     class main
     user root
-    group root
+    group radio
 
 # QCOM sensor
 service sensors /system/bin/sensors.qcom
@@ -493,13 +504,13 @@ service bugreport /system/bin/dumpstate -d -p -B \
 service mpdecision /system/bin/mpdecision --avg_comp
    class main
    user root
-   group root
+   group system
    disabled
 
 service thermal-engine /system/bin/thermal-engine
    class main
    user root
-   group root
+   group radio system
 
 service time_daemon /system/bin/time_daemon
     class late_start
