--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -34,6 +34,11 @@ on init
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
 
+on post-fs-data
+    # Torch
+    chown system camera /sys/devices/qcom,camera-led-flash.81/test
+    chmod 0660 /sys/devices/qcom,camera-led-flash.81/test
+
 service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/sdcard0 /storage/sdcard0
     class late_start
     disabled
