--- a/rootdir/recovery/init.recovery.target.rc
+++ b/rootdir/recovery/init.recovery.target.rc
@@ -1,6 +1,12 @@
 #These are used to handle find7a vs. find7s
 #and used to be in init.recovery.rc in device/oppo/msm8974-common
 
+on early-init
+    #First wait for the physical volumes to be available.  Init appears to
+    #start before the MMC driver comes up and creates the block devices
+    wait /dev/block/platform/msm_sdcc.1/by-name/userdata
+    wait /dev/block/platform/msm_sdcc.1/by-name/sdcard
+
 service qhdcp /sbin/qhdcp.sh
     oneshot
     disabled
