find7-common: symlink unified/standard fstab in recovery-init
This provides universal (unified/standard) storage layout for twrp based on
"ro.oppo.layout".

Change-Id: I6946aed07d9c2e236956edd7b5c7e7dc6ebbde1b

--- a/rootdir/recovery/init.recovery.target.rc
+++ b/rootdir/recovery/init.recovery.target.rc
@@ -13,3 +13,9 @@ service qhdcp /sbin/qhdcp.sh
 
 on property:ro.oppo.device=find7s
     start qhdcp
+
+on property:ro.oppo.layout=unified
+   symlink /etc/twrp.fstab.ufd /etc/twrp.fstab
+
+on property:ro.oppo.layout=standard
+   symlink /etc/twrp.fstab.std /etc/twrp.fstab
