--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1,5 +1,6 @@
 #
 # Copyright 2014 The CyanogenMod Project
+# Copyright 2014 The NamelessRom Project
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,31 +14,52 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
 import /init.qcom-common.rc
 
+on early-init
+    # wait until data is available
+    wait /dev/block/platform/msm_sdcc.1/by-name/userdata
+    wait /dev/block/platform/msm_sdcc.1/by-name/sdcard
+
+    # copy fstab and init.rc depending on if we are unified or not
+    exec /sbin/static/busybox sh /storage_earlyinit.sh
+
 on fs
-    mount_all ./fstab.qcom
-    restorecon_recursive /persist
+    mount_all /fstab.qcom
     setprop ro.crypto.fuse_sdcard true
 
 on init
-    # See storage config details at http://source.android.com/tech/storage/
-    chmod 0701 /mnt/media_rw
-    mkdir /mnt/media_rw/sdcard0 0775 system system
-    mkdir /mnt/media_rw/sdcard1 0775 system system
-    mkdir /mnt/media_rw/usbdisk 0775 system system
+    mkdir /mnt/shell/emulated 0700 shell shell
+    mkdir /storage 0550 system sdcard_r
+    mkdir /storage/emulated 0555 root root
 
-    mkdir /storage/sdcard0 0000 system system
-    mkdir /storage/sdcard1 0000 system system
-    mkdir /storage/usbdisk 0000 system system
+    # External storage directories
+    mkdir /mnt/media_rw/sdcard0 0755 media_rw media_rw
+    mkdir /mnt/media_rw/sdcard1 0755 media_rw media_rw
+    mkdir /mnt/media_rw/usbdisk 0700 media_rw media_rw
 
-    export EXTERNAL_STORAGE /storage/sdcard0
-    export SECONDARY_STORAGE /storage/sdcard1:/storage/usbdisk
+    # export environmental values, depending on if we are unified or not
+    export_rc init.fs.rc
 
-    # Support legacy paths
-    symlink /storage/sdcard0 /sdcard
-    symlink /storage/sdcard0 /mnt/sdcard
+    mkdir /storage/sdcard0 0700 root root
+    mkdir /storage/sdcard1 0700 root root
+    mkdir /storage/usbdisk 0700 root root
+
+    symlink /storage/sdcard1 /extSdCard
+    symlink /storage/sdcard1 /mnt/extSdCard
+    symlink /storage/sdcard1 /external_sd
+    symlink /storage/usbdisk /usbdisk
+    symlink /storage/usbdisk /mnt/usbdisk
+
+    # initialize storage depending on if we are unified or not
+    exec /sbin/static/busybox sh /storage_init.sh
+
+on post-fs-data
+    # Torch
+    chown system camera /sys/devices/qcom,camera-led-flash.81/test
+    chmod 0660 /sys/devices/qcom,camera-led-flash.81/test
+    chown system camera /sys/class/leds/torch-light/brightness
+    chmod 0660 /sys/class/leds/torch-light/brightness
 
 on boot
     # For find7s notification LED
@@ -54,12 +76,8 @@ on boot
     chown system system /sys/class/leds/led:rgb_blue/duty_pcts
     chown system system /sys/class/leds/led:rgb_blue/blink
 
-on post-fs-data
-    # Torch
-    chown system camera /sys/devices/qcom,camera-led-flash.81/test
-    chmod 0660 /sys/devices/qcom,camera-led-flash.81/test
-    chown system camera /sys/class/leds/torch-light/brightness
-    chmod 0660 /sys/class/leds/torch-light/brightness
+service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
+    class late_start
 
 service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/sdcard0 /storage/sdcard0
     class late_start
@@ -73,3 +91,22 @@ service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk /s
     class late_start
     disabled
 
+on property:ro.fuse_sdcard=true
+    start sdcard
+
+# This will make sure that sdcard service starts as late_start.
+on nonencrypted
+    setprop ro.fuse_sdcard ${persist.fuse_sdcard}
+
+on property:vold.decrypt=trigger_restart_framework
+    setprop ro.fuse_sdcard ${persist.fuse_sdcard}
+
+# Override storage list for MountService according to detected
+# storage layout.
+on property:ro.oppo.layout=unified
+    setprop ro.storage_list.override storage_list_ufd
+
+# This can be removed once there are no more special unified builds
+# and the default layout is always the standard layout.
+on property:ro.oppo.layout=standard
+    setprop ro.storage_list.override storage_list_std
