find7-common/twrp: set device properties independly of the target device
TWRP-builds are universal for find7s/find7a and unified/non-unified
storage layout. Set ro.product.device to find7/find7a in init and
ro.build.product always to find7. This should give a good balance of
precision and recall for asserts in older and newer install-scripts.

Change-Id: Ib8251fd2f582fbe236829c65950950886e311eeb

--- a/rootdir/recovery/init.recovery.target.rc
+++ b/rootdir/recovery/init.recovery.target.rc
@@ -12,7 +12,11 @@ service qhdcp /sbin/qhdcp.sh
     disabled
 
 on property:ro.oppo.device=find7s
+    setprop ro.product.device find7
     start qhdcp
+
+on property:ro.oppo.device=find7a
+    setprop ro.product.device find7a
 
 on property:ro.oppo.layout=unified
    symlink /etc/twrp.fstab.ufd /etc/twrp.fstab
