--- a/rootdir/recovery/init.recovery.target.rc
+++ b/rootdir/recovery/init.recovery.target.rc
@@ -7,6 +7,11 @@ on early-init
     wait /dev/block/platform/msm_sdcc.1/by-name/userdata
     wait /dev/block/platform/msm_sdcc.1/by-name/sdcard
 
+    # scan for LVM partitions.  Our lvm.conf restricts this to the userdata and sdcard partitions
+    exec /sbin/lvm vgscan --mknodes --ignorelockingfailure
+    # activate any partitions found
+    exec /sbin/lvm vgchange -aly --ignorelockingfailure
+
 service qhdcp /sbin/qhdcp.sh
     oneshot
     disabled
@@ -20,6 +25,9 @@ on property:ro.oppo.device=find7a
 
 on property:ro.oppo.layout=unified
    symlink /etc/twrp.fstab.ufd /etc/twrp.fstab
+
+on property:ro.oppo.layout=lvm
+   symlink /etc/twrp.fstab.lvm /etc/twrp.fstab
 
 on property:ro.oppo.layout=standard
    symlink /etc/twrp.fstab.std /etc/twrp.fstab
