recovery: init: set device to FIND7
  * ensures compatibility with LVM zips
  * the rom asserts against FIND7 so nothing should break

Change-Id: I093e585365f75f99d41a456c322f07f3fc9b8b02
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/rootdir/recovery/init.recovery.target.rc
+++ b/rootdir/recovery/init.recovery.target.rc
@@ -13,10 +13,10 @@ on early-init
     exec /sbin/lvm vgchange -aly --ignorelockingfailure
 
 on property:ro.oppo.device=find7s
-    setprop ro.product.device find7
+    setprop ro.product.device FIND7
 
 on property:ro.oppo.device=find7a
-    setprop ro.product.device find7a
+    setprop ro.product.device FIND7
 
 on property:ro.oppo.layout=unified
    symlink /etc/twrp.fstab.ufd /etc/twrp.fstab
