DeviceExtra: increase priority of bootreceiver
Change-Id: I74844f6f7d018884b6f007d6513c65806d47073c
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/deviceextra/AndroidManifest.xml
+++ b/deviceextra/AndroidManifest.xml
@@ -44,7 +44,7 @@
         </activity>
 
         <receiver android:name="org.namelessrom.device.extra.receivers.Startup">
-            <intent-filter>
+            <intent-filter android:priority="900">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
