recovery: wait until storage init is completed before continuing init process
Storage layout detection can now take upto ~20s. Wait for it to finish
before continuing with the init process. Otherwise recovery might be
started before /etc/twrp.fstab is created.

This fixes "Invalid block device on ..." errors that happened when
twrp read the default /etc/recovery.fstab because /etc/twrp.fstab was
not yet created.

Change-Id: I09e8ec59694128a308a3611b6107bda39769a957

--- a/rootdir/recovery/init.recovery.target.rc
+++ b/rootdir/recovery/init.recovery.target.rc
@@ -5,6 +5,7 @@ on early-init
 
     # initialize storage
     start storage_init
+    wait /etc/twrp.fstab 25
 
 service storage_init /sbin/storage_init_recovery.sh
     oneshot
