--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -21,10 +21,14 @@ on early-init
     wait /dev/block/platform/msm_sdcc.1/by-name/userdata
     wait /dev/block/platform/msm_sdcc.1/by-name/sdcard
 
+    ### TODO: use exec_context again once support is in place
     # scan for LVM partitions.  Our lvm.conf restricts this to the userdata and sdcard partitions
-    exec_context u:r:lvm:s0 /sbin/lvm vgscan --mknodes --ignorelockingfailure
+    #exec_context u:r:lvm:s0 /sbin/lvm vgscan --mknodes --ignorelockingfailure
+    exec /sbin/lvm vgscan --mknodes --ignorelockingfailure
+
     # activate any partitions found
-    exec_context u:r:lvm:s0 /sbin/lvm vgchange -aly --ignorelockingfailure
+    #exec_context u:r:lvm:s0 /sbin/lvm vgchange -aly --ignorelockingfailure
+    exec /sbin/lvm vgchange -aly --ignorelockingfailure
 
     # copy fstab and init.rc depending on storage layout
     exec /sbin/static/busybox sh /storage_earlyinit.sh
