--- a/rootdir/recovery/init.recovery.target.rc
+++ b/rootdir/recovery/init.recovery.target.rc
@@ -1,13 +1,2 @@
-on early-init
-    # wait until data is available
-    wait /dev/block/platform/msm_sdcc.1/by-name/userdata
-    wait /dev/block/platform/msm_sdcc.1/by-name/sdcard
-
-    # initialize storage
-    start storage_init
+on init
     wait /etc/twrp.fstab 25
-
-service storage_init /sbin/storage_init_recovery.sh
-    oneshot
-    disabled
-    seclabel u:r:recovery:s0
