find7: power: Disable input boost while screen is off
For unknown reasons the kernel boost driver interprets
certain events as input boost. This becomes appearent
because not all music players use wakelocks any more
(Google's Play Music being a prominent example).

While it is great that our cpu is now able to use deeper
sleep states during offloaded media playback most of the
time, it is not so great that the benefits are outweighed
by unnessecarily high freqs while ghost-boosted.  To work
around this, disable input boost while we don't need it
anyway.

Set proper permissions on the sysfs node as well.

Change-Id: I6cc5b61c5879ca4bd603ccd4930a05b70854acc2

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -35,7 +35,7 @@ on post-fs-data
     chmod 0660 /sys/class/leds/torch-light/brightness
 
 on boot
-    # For find7s notification LED
+    # Find7s notification LED
     chown system system /sys/class/leds/led:rgb_red/brightness
     chown system system /sys/class/leds/led:rgb_red/ramp_step_ms
     chown system system /sys/class/leds/led:rgb_red/duty_pcts
@@ -48,3 +48,7 @@ on boot
     chown system system /sys/class/leds/led:rgb_blue/ramp_step_ms
     chown system system /sys/class/leds/led:rgb_blue/duty_pcts
     chown system system /sys/class/leds/led:rgb_blue/blink
+
+    # cpu-boost
+    chown system system /sys/module/cpu_boost/parameters/input_boost_ms
+    chmod 664 /sys/module/cpu_boost/parameters/input_boost_ms
