init: set proper permissions for reset on suspend toggle
Change-Id: I33c9c6250e6d7360e79da11542347da4aa364f3e
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -52,3 +52,7 @@ on boot
     # cpu-boost
     chown system system /sys/module/cpu_boost/parameters/input_boost_ms
     chmod 664 /sys/module/cpu_boost/parameters/input_boost_ms
+
+    # reset on suspend
+    chown system system /sys/class/input/input0/reset_on_suspend
+    chmod 664 /sys/class/input/input0/reset_on_suspend
