init: configure vibration strength
  * reduce strength to make it feel better

Change-Id: I1a50911032048bf6799b2c2ded3ea932c008e1e3
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -56,3 +56,6 @@ on boot
     # reset on suspend
     chown system system /sys/class/input/input0/reset_on_suspend
     chmod 664 /sys/class/input/input0/reset_on_suspend
+
+    # set vibration to a sane value
+    write /sys/class/timed_output/vibrator/vtg_level 28
