find7: Enable ZRAM and ZCACHE
 * Improves performance over days of usage.

Change-Id: Idc9ea3c18e17f721277893dda2d77d76b71fe07f

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -21,11 +21,14 @@ on fs
     restorecon /dev/mapper/lvpool-userdata
 
     mount_all /fstab.qcom
+    swapon_all /fstab.qcom
 
 on init
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
     symlink /sdcard /storage/sdcard0
+
+    write /proc/sys/vm/page-cluster 0
 
 on post-fs-data
     # Torch
