--- a/deviceextra/AndroidManifest.xml
+++ b/deviceextra/AndroidManifest.xml
@@ -35,8 +35,14 @@
             android:launchMode="singleTop"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="org.namelessrom.action.LAUNCH_EXTRA_DEVICE_SETTINGS" />
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.personalization" />
+            <meta-data
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_settings_find7" />
         </activity>
 
         <receiver android:name="org.namelessrom.device.extra.receivers.Startup">
